lab1/Test/L1-A-7-0.output
Error Type A at Line 6
Error Type A at Line 15
Error Type A at Line 33
