lab1/Test/L1-A-7-0.cmm
struct Dr8d {
};
int Imm , rOFh8KB1Xq4eOhHnmWj8 

;
struct EuApCKep5ZTTgq t ( ) ${
  int BV65qbC36yi ;
  if ( GQQW3Q )   while ( _Pg3Eo6bx2X7H ) {
    struct AP94X55cubcmthYAPV HflqIvExBHk0WA9jFTco 
      ;
    float Cm_zr , WZS0SjLy_k6EOkDtt ;
    int k [ 1686349085 ] = TyerRz0aWIeA1PHP ;
  }
else   return cARjreWd7 || VWdhv_I7MpoIyroIwhxU && 
    nl <= %JSHM3 * ! - cxvTTYnps [ xFHFQw8nV5CYstY5 = 
    EEKz9pcx3cNXG >= R1d2SNuc1FvG5R + vbcQNgs139 / Bx4 
    ( UvFc9jEKzP8YYJ3otdN == yTEkcjXTL [ TQEYSLoPHufa4fv 
    != xTMoJ ( RJAca0s6O7NKz2bdhKfk , pZns21_F ) . q_BUPLMcBmQp9Z9ixg 
    + lwNvsKe5 * ( X11_I80WgesvdeIXdz < ( - ! - - pPQel8 
    ) . x9t4swUucNSReds5 - 982537713.2146607815 > 1303033992 
    ) ] ) ] / - ! kQUK - teYlSqcNsLR4 ( ) . y6kbCjcUzAxgSw7 
    ;

}
struct {
};
int ;
int ;
int ;
int M9T0nyft ( int RJgdO5v4zQioQs , int Rvo_cmJQi81L9SoQ 
  ) {
}
$int KbwrimqJ1 ( ) {
  if ( WxJiuMYpqnnfTB5pF )   bNs2CzwE3M ;
else   if ( qn )   iA ;


}
int ;
